--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 @import './base.css';
-@import "tailwindcss";
+@import 'tailwindcss';
 
 a,
 .green {
@@ -8,4 +8,3 @@ a,
   transition: 0.4s;
   padding: 3px;
 }
-
